--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "redux": "4.0.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "husky": "^3.0.9",
+    "prettier": "^1.19.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/react-scripts start"
+    "start": "./node_modules/.bin/react-scripts start",
+    "prettier": "prettier --check --write \"**/*.js\""
+  },
+  "husky": {
+    "pre-commit": "npm run pretier"
   }
 }
